# Yan-CG-SnowSim

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: BVH.hpp  Bounds3.hpp  Grid.hpp  Intersection.hpp  Ray.hpp  Rectangular.hpp  Shape.hpp  SnowParticle.hpp  Sphere.hpp  Triangle.hpp  camera.hpp  extra.hpp  global.hpp  simDomain.hpp
src/: BVH.cpp  Grid.cpp  SimDomain.cpp  SnowParticle.cpp  camera.cpp  main.cpp
